layout - section - fix large-screen wrapping issue - fixes #126 (#129)

--- a/_assets/css/elevate_theme/_layout.scss
+++ b/_assets/css/elevate_theme/_layout.scss
@@ -681,6 +681,7 @@ a.nav-icon {
     padding: 6vw;
 
     @media all and (min-width: 1441px) {
+        display: block;
         padding: 90px;
     }
 
